--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@next/mdx": "^14.2.4",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@types/mdx": "^2.0.13",
     "canvas-confetti": "^1.9.3",
